--- a/934cb2ec8182f9d563020e21c052d428.html
+++ b/934cb2ec8182f9d563020e21c052d428.html
@@ -40,8 +40,8 @@
                           <p class="card-text">
                             Dear participant, <br/>
                             Thank you for participating in this study. This study is conducted by the Travel Medical Consultation project of the
-                            Collaborative Development of Conversational Agents course organized by 3 German Universities (University of Hamburg, Saarland University,
-                            Dresden University of Technology). 
+                            Collaborative Development of Conversational Agents course organized by 3 German Universities (Universität Hamburg, Universität des Saarlandes,
+                            Technische Universität Dresden). 
                             <br/>
                             The purpose is to investigate the difference in the impact of robot-type and human-type chatbots on users.
                             The study takes about “” minutes and consists of 4 parts. During the whole process, you do not have the possibility to go back to the previous
