--- a/934cb2ec8182f9d563020e21c052d428.html
+++ b/934cb2ec8182f9d563020e21c052d428.html
@@ -21,41 +21,31 @@
             </a>
         </nav>
         <div class="container">
-            <!-- <div class="row">
-                <div class="col-md-12">
-                    <div class="d-flex justify-content-center">
-                        <div class="spinner-border hidden" role="status" id='loader'>
-                            <span class="sr-only hidden">Loading...</span>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
             <div class="row" id='intro'>
                 <div class="col-md-12 col-lg-12">
                     <div class="card">
                         <div class="card-header">
-                          Introduction
-                        </div>
-                        <div class="card-body">
-                          <p class="card-text">
-                            Dear participant, <br/>
-                            Thank you for participating in this study. This study is conducted by the Travel Medical Consultation project of the
-                            Collaborative Development of Conversational Agents course organized by 3 German Universities (Universität Hamburg, Universität des Saarlandes,
-                            Technische Universität Dresden). 
-                            <br/>
-                            The purpose is to investigate the difference in the impact of robot-type and human-type chatbots on users.
-                            The study takes about “” minutes and consists of 4 parts. During the whole process, you do not have the possibility to go back to the previous
-                            part. Once you click “Next”, you will be forwarded to the next section and cannot go back. Please do NOT use the back button of your browser.
-                            Please use a laptop for this study. Otherwise, the content is not displayed correctly. As the learning material contains complex English terms
-                            and explanations, you need to have at least a B2 English level to take part.                            
-                          </p>
-                        <a href="#" class="btn btn-primary" id="intro" onclick="next(this, 'consent')">Next</a>
-                        </div>
-                    </div>
-                    <div class="card hidden" id="consent">
-                        <div class="card-header">
-                            Consent
-                        </div>
+                            <h2>Introduction</h2>
+                          </div>
+                          <div class="card-body">
+                            <p class="card-text">
+                              Dear participant, <br/><br/>
+                              Thank you for participating in this study. This study is part of a coursework for the course
+                              Collaborative Development of Conversational Agents organized by four German Universities, namely Karlsruhe Institute of Technology, Technische Universität Dresden,
+                              Universität des Saarlandes and Universität Hamburg. 
+                              <br/> <br/>
+                              The purpose is to investigate the difference in the impact of robot-type and human-type chatbots on users.
+                              The study takes about 20 minutes and consists of four parts. During the whole process, you do not have the possibility to go back to the previous
+                              part. Once you click “Next”, you will be forwarded to the next section and cannot go back. We recommend to use a laptop for this survey.
+                              As the learning material contains complex English terms and explanations, you need to have at least a B2 English level to take part.                            
+                            </p>
+                          <a href="#" class="btn btn-primary" id="intro" onclick="next(this, 'consent')">Next</a>
+                          </div>
+                      </div>
+                      <div class="card hidden" id="consent">
+                          <div class="card-header">
+                              <h2>Consent</h2>
+                          </div>
                         <div class="card-body">
                           <p class="card-text">
                             *With your participation, you declare that we are allowed to use your data for the purpose of our study. The data is stored and used
