--- a/639ca6172daf2f1acf5ed7a363fd232b.html
+++ b/639ca6172daf2f1acf5ed7a363fd232b.html
@@ -34,31 +34,30 @@
                 <div class="col-md-12 col-lg-12">
                     <div class="card">
                         <div class="card-header">
-                          Introduction
+                          <h2>Introduction</h2>
                         </div>
                         <div class="card-body">
                           <p class="card-text">
-                            Dear participant, <br/>
-                            Thank you for participating in this study. This study is conducted by the Travel Medical Consultation project of the
-                            Collaborative Development of Conversational Agents course organized by 3 German Universities (Universität Hamburg, Universität des Saarlandes,
-                            Technische Universität Dresden). 
-                            <br/>
+                            Dear participant, <br/><br/>
+                            Thank you for participating in this study. This study is part of a coursework for the course
+                            Collaborative Development of Conversational Agents organized by four German Universities, namely Karlsruhe Institute of Technology, Technische Universität Dresden,
+                            Universität des Saarlandes and Universität Hamburg. 
+                            <br/> <br/>
                             The purpose is to investigate the difference in the impact of robot-type and human-type chatbots on users.
-                            The study takes about “” minutes and consists of 4 parts. During the whole process, you do not have the possibility to go back to the previous
-                            part. Once you click “Next”, you will be forwarded to the next section and cannot go back. Please do NOT use the back button of your browser.
-                            Please use a laptop for this study. Otherwise, the content is not displayed correctly. As the learning material contains complex English terms
-                            and explanations, you need to have at least a B2 English level to take part.                            
+                            The study takes about 20 minutes and consists of four parts. During the whole process, you do not have the possibility to go back to the previous
+                            part. Once you click “Next”, you will be forwarded to the next section and cannot go back. We recommend to use a laptop for this survey.
+                            As the learning material contains complex English terms and explanations, you need to have at least a B2 English level to take part.                            
                           </p>
                         <a href="#" class="btn btn-primary" id="intro" onclick="next(this, 'consent')">Next</a>
                         </div>
                     </div>
                     <div class="card hidden" id="consent">
                         <div class="card-header">
-                            Consent
+                            <h2>Consent</h2>
                         </div>
                         <div class="card-body">
                           <p class="card-text">
-                            *With your participation, you declare that we are allowed to use your data for the purpose of our study. The data is stored and used
+                            With your participation, you declare that we are allowed to use your data for the purpose of our study. The data is stored and used
                             anonymously. We cannot draw any conclusions about your identity, such as your name, email address, or IP address. No one will know whether
                             or not you participated in the study. Your participation is voluntary, and nobody is forcing you to take part. You can cancel your
                             participation in this study at any point in time and do not need to declare the reason. With your participation, you declare that you read
@@ -129,7 +128,10 @@
                 host: "http://localhost:5005",
                 title: "Chat with Alex",
                 container: document.querySelector(".chat-container1"),
-                welcomeMessage: "Hello, I am Alex. How may I help you?",
+                welcomeMessage: "Hello, my name is Alex and I am a Travel Medical Consultant bot. You can ask me about \n \
+                    - travel vaccination information for Australia, Sudan and Ethiopia \n \
+                    - COVID-19 and Yellow Fever vaccination information \n \
+                    - other travel health tips and precautions \n",
                 fetchOptions: 'bot'
             });
         chatroom.openChat();
