--- a/639ca6172daf2f1acf5ed7a363fd232b.html
+++ b/639ca6172daf2f1acf5ed7a363fd232b.html
@@ -125,7 +125,7 @@
         <script src="public/js/chatroom.js"></script>
         <script type="text/javascript">
             var chatroom = new window.Chatroom({
-                host: "https://4202-34-159-29-251.ngrok.io",
+                host: "https://1c81-34-159-29-251.ngrok.io",
                 title: "Chat with Alex",
                 container: document.querySelector(".chat-container1"),
                 welcomeMessage: "Hello, my name is Alex and I am a Travel Medical Consultant bot. You can ask me about \n \
