Added survey forms

--- a/934cb2ec8182f9d563020e21c052d428.html
+++ b/934cb2ec8182f9d563020e21c052d428.html
@@ -31,7 +31,7 @@
                             <p class="card-text">
                               Dear participant, <br/><br/>
                               Thank you for participating in this study. This study is part of a coursework for the course
-                              Collaborative Development of Conversational Agents organized by four German Universities, namely Karlsruhe Institute of Technology, Technische Universität Dresden,
+                              Collaborative Development of Conversational Agents organized by four German Universities, namely Karlsruher Institut für Technologie, Technische Universität Dresden,
                               Universität des Saarlandes and Universität Hamburg. 
                               <br/> <br/>
                               The purpose is to investigate the difference in the impact of robot-type and human-type chatbots on users.
@@ -119,7 +119,10 @@
                 host: "http://localhost:5005",
                 title: "Chat with Alex",
                 container: document.querySelector(".chat-container2"),
-                welcomeMessage: "Hello, I am Alex. How may I help you?"
+                welcomeMessage: "Hello, my name is Alex. I am a Travel Medical Consultant bot. You can ask me about \n \
+                    - travel vaccination information for Australia, Sudan and Ethiopia \n \
+                    - COVID-19 and Yellow Fever vaccination information \n \
+                    - other travel health tips and precautions \n",
             });
         chatroom.openChat();
         </script>
