Updated server url

--- a/639ca6172daf2f1acf5ed7a363fd232b.html
+++ b/639ca6172daf2f1acf5ed7a363fd232b.html
@@ -159,7 +159,7 @@
         <script src="public/js/chatroom.js"></script>
         <script type="text/javascript">
             var chatroom = new window.Chatroom({
-                host: "https://c062-34-159-29-251.ngrok.io",
+                host: "https://afd2-34-159-93-149.ngrok.io",
                 title: "Chat with Alex",
                 container: document.querySelector(".chat-container1"),
                 welcomeMessage: "Hello!",
