--- a/639ca6172daf2f1acf5ed7a363fd232b.html
+++ b/639ca6172daf2f1acf5ed7a363fd232b.html
@@ -160,7 +160,7 @@
         <script type="text/javascript">
             var chatroom = new window.Chatroom({
                 host: "https://afd2-34-159-93-149.ngrok.io",
-                title: "Chat with Alex",
+                title: "Chat",
                 container: document.querySelector(".chat-container1"),
                 welcomeMessage: "Hello!",
                 fetchOptions: 'bot'
