--- a/934cb2ec8182f9d563020e21c052d428.html
+++ b/934cb2ec8182f9d563020e21c052d428.html
@@ -142,7 +142,7 @@
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                     <p> Write `/restart` to reset the chatbot and `/examples` to get example questions to ask.</p>
-                    <div class="chat-container1"></div>
+                    <div class="chat-container2"></div>
                     <a href="#" class="btn btn-success mt-4" onclick="next(this, 'post-survey')">Next</a>
                 </div>
                 <div class="col-md-3"></div>
@@ -151,7 +151,7 @@
         <script src="public/js/chatroom.js"></script>
         <script type="text/javascript">
             var chatroom = new window.Chatroom({
-                host: "https://afd2-34-159-93-149.ngrok.io",
+                host: "https://d615-34-140-123-71.ngrok.io",
                 title: "Chat with Alex",
                 container: document.querySelector(".chat-container2"),
                 welcomeMessage: "Hello, my name is Alex. I am a Travel Medical Consultant bot. \n \
