--- a/934cb2ec8182f9d563020e21c052d428.html
+++ b/934cb2ec8182f9d563020e21c052d428.html
@@ -154,8 +154,7 @@
                 host: "https://d615-34-140-123-71.ngrok.io",
                 title: "Chat with Alex",
                 container: document.querySelector(".chat-container2"),
-                welcomeMessage: "Hello, my name is Alex. I am a Travel Medical Consultant bot. \n \
-                    What is your name? \n",
+                welcomeMessage: "Hello, my name is Alex. I am a Travel Medical Consultant bot.",
             });
         chatroom.openChat();
         </script>
