--- a/639ca6172daf2f1acf5ed7a363fd232b.html
+++ b/639ca6172daf2f1acf5ed7a363fd232b.html
@@ -101,7 +101,7 @@
                                     <label class="form-check-label" for="check">I have read the instructions carefully.</label>
                                 </div>
                             </p>
-                            <a href="#" class="btn btn-success disabled" onclick="next(this, 'pre-survey')">Start</a>
+                            <a href="#" class="btn btn-success disabled" onclick="next(this, 'pre-survey')" id="start">Start</a>
                         </div>
                     </div>
                     <div class="card hidden" id="pre-survey">
