Updated consent form

--- a/639ca6172daf2f1acf5ed7a363fd232b.html
+++ b/639ca6172daf2f1acf5ed7a363fd232b.html
@@ -49,8 +49,7 @@
                         <div class="card-body">
                           <p class="card-text">
                             With your participation, you declare that we are allowed to use your data for the purpose of our study. The data is stored and used
-                            anonymously. We cannot draw any conclusions about your identity, such as your name, email address, or IP address. No one will know whether
-                            or not you participated in the study. Your participation is voluntary, and nobody is forcing you to take part. You can cancel your
+                            anonymously. Your participation is voluntary, and nobody is forcing you to take part. You can cancel your
                             participation in this study at any point in time and do not need to declare the reason. With your participation, you declare that you read
                             the previous conditions and agree to the following:  
                             <ul>
