Updated duration information

--- a/639ca6172daf2f1acf5ed7a363fd232b.html
+++ b/639ca6172daf2f1acf5ed7a363fd232b.html
@@ -88,7 +88,7 @@
                                         <li> You are traveling to Ethiopia from any other country. </li>
                                     </ul>
                                     <b>We recommend you to consider two or more scenarios. To restart the chat, you can message `/restart` to the chatbot.</b>
-                                    <b>We recommend you to chat with the chatbot for at least two minutes.</b>
+                                    <b>We recommend you to chat with the chatbot for more than two minutes.</b>
                                 <br/><br/>
                                 <h3>Post-survey</h3>
                                 In this section, you will be asked questions related to your experience in using the chatbot. You will also be asked to retake the Knowledge
